sldier text size fix on small screens

--- a/Raiduga.Web/Content/less/site.less
+++ b/Raiduga.Web/Content/less/site.less
@@ -1188,6 +1188,15 @@ footer {
 				float: right !important;
 				text-align: right;
 				padding-right: 10px !important;
+
+                
+                li {
+                    padding: 5px 0;
+
+                    a {
+                        padding: 0;
+                    }
+                }
 			}
 		}
 	}
@@ -1591,6 +1600,15 @@ footer {
 				float: right !important;
 				text-align: right;
 				padding-right: 10px !important;
+
+                
+                li {
+                    padding: 5px 0;
+
+                    a {
+                        padding: 0;
+                    }
+                }
 			}
 		}
 
@@ -1918,6 +1936,14 @@ footer {
 
 			ul {
 				float: left !important;
+
+                li {
+                    padding: 5px 20px;
+
+                    a {
+                        padding: 0;
+                    }
+                }
 			}
 		}
 	}
